Task-3/httpd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
spec:
  selector:
    app: httpd
  ports:
  - protocol: TCP
    port: 80       # Service port
    targetPort: 80 # Container port
  type: ClusterIP
